--- a/ProblemaMochilaTex/ProblemaMochila.tex
+++ b/ProblemaMochilaTex/ProblemaMochila.tex
@@ -92,16 +92,16 @@ A la hora de evaluar los algoritmos generaremos ficheros donde guardar los casos
 
 Para producir los casos de prueba lo haremos de manera aleatoria. Generaremos un número de objetos a los cuales les limitaremos el peso y valor para evitar desbordamientos en casos muy grandes. Además, se guardará también el peso máximo de la mochila y el número de objetos. Incluimos a continuación el código para generar un caso de prueba donde los pesos de los objetos y el tamaño máximo de la mochila son números reales. El caso en que estos números sean enteros es análogo.
 
-\lstinputlisting[firstline=558, lastline=588]{../ProblemaMochilaCpp/ProblemaMochila.cpp}
+\lstinputlisting[firstline=561, lastline=592]{../ProblemaMochilaCpp/ProblemaMochila.cpp}
 
 \ \\
 Posteriormente leeremos los ficheros que hemos generado, guardando los objetos y los valores del caso de prueba en las estructuras que utilizaremos para llamar al algoritmo. El código en el caso de construir objetos con pesos reales es el siguiente: 
 
-\lstinputlisting[firstline=609, lastline=636]{../ProblemaMochilaCpp/ProblemaMochila.cpp}
+\lstinputlisting[firstline=613, lastline=640]{../ProblemaMochilaCpp/ProblemaMochila.cpp}
 
 Finalmente ejecutaremos el algoritmo en cuestión varias veces para evitar las pequeñas variaciones de los tiempos, ajenas a los algoritmos, entre unas realizaciones y otras. Devolveremos por pantalla el valor de la solución y el tiempo transcurrido. El código para ejecutar un caso de prueba sobre el algoritmo voraz lo incluimos a continuación.
 
-\lstinputlisting[firstline=790, lastline=826]{../ProblemaMochilaCpp/ProblemaMochila.cpp}
+\lstinputlisting[firstline=907, lastline=943]{../ProblemaMochilaCpp/ProblemaMochila.cpp}
 
 
 \section{Implementación de los algoritmos}
@@ -211,7 +211,7 @@ Para $valorPes(X)$ completaremos una posible solución. Incorporaremos a la mochi
 
 \subsubsection{Código}
 
-\lstinputlisting[firstline=137, lastline=252]{../ProblemaMochilaCpp/ProblemaMochila.cpp}
+\lstinputlisting[firstline=137, lastline=255]{../ProblemaMochilaCpp/ProblemaMochila.cpp}
 
 \subsubsection{Análisis de costes}
 
@@ -227,35 +227,35 @@ Implementaremos ahora un algoritmo genético para resolver el problema de la moch
 
 Veamos las estructuras y las funciones que hemos utilizado a la hora de implementar el algoritmo genético. Representaremos cada solución como un cromosoma que contendrá el vector de soluciones y su valor asociado. Como estamos tratando de maximizar el valor de la mochila, un cromosoma será mejor que otro si su valor es mayor. Más adelante necesitaremos también ordenar toda la población y lo haremos mediante un vector auxiliar de índices así que implementamos también una estructura comparadora.
 
-\lstinputlisting[firstline=256, lastline=275]{../ProblemaMochilaCpp/ProblemaMochila.cpp}
+\lstinputlisting[firstline=259, lastline=278]{../ProblemaMochilaCpp/ProblemaMochila.cpp}
 
 A la hora de calcular la aptitud de un cromosoma calcularemos el valor total de los objetos que tiene. Como tenemos que tener en cuenta la restricción de que el total de los pesos de la mochila no puede superar el peso máximo $M$, será aquí donde impongamos esto. Si una solución de las que hemos obtenido al inicio o después de un cruce o mutación supera en peso a $M$, iremos quitando objetos de manera aleatoria hasta que cumplamos dicha condición. Para inicializar la población lo haremos también de manera aleatoria.
 
-\lstinputlisting[firstline=288, lastline=339]{../ProblemaMochilaCpp/ProblemaMochila.cpp}
+\lstinputlisting[firstline=291, lastline=342]{../ProblemaMochilaCpp/ProblemaMochila.cpp}
 
 Estudiemos la elección de los cromosomas a cruzarse para obtener la siguiente generación. La idea básica detrás de lo que vamos a hacer es escoger con una probabilidad mayor los mejores cromosomas (para que el algoritmo converja más rápido), pero sin dejar de lado los menos aptos (para evitar converger en un mínimo local). Además utilizaremos elitismo, es decir, un porcentaje de los mejores cromosomas se cruzarán siempre. De esta forma nos aseguramos de que no perdemos los mejores candidatos que tenemos por el momento.\\
 
 Así, primero ordenaremos la población, luego aplicaremos elitismo y finalmente completaremos el conjunto de los cromosomas seleccionando de forma aleatoria. Para elegir con mayor probabilidad los mejores candidatos, dividiremos la población en cuatro intervalos y seleccionaremos de forma ponderada individuos de cada intervalo. Cabe destacar que se puede seleccionar cada cromosoma más de una vez. Estas ideas de selección y el elitismo pueden verse en \cite{hrist-shre04}.
 
-\lstinputlisting[firstline=341, lastline=384]{../ProblemaMochilaCpp/ProblemaMochila.cpp}
+\lstinputlisting[firstline=344, lastline=387]{../ProblemaMochilaCpp/ProblemaMochila.cpp}
 
 Veamos cómo haremos los cruces y las mutaciones de los individuos seleccionados. Sólo se cruzarán un porcentaje, que tomaremos alto, de los cromosomas, y de esta manera algunos se transmitirán intactos a la siguiente generación. Para cruzar los cromosomas los iremos cogiendo por parejas, escogeremos un punto aleatorio de la cadena del cromosoma e intercambiaremos la información hasta dicho punto. Las mutaciones se harán sólo en un porcentaje muy bajo de los individuos. Si un cromosoma debe mutarse, invertiremos de forma aleatoria un porcentaje de sus elementos (si antes un objeto se cogía ahora no y viceversa).
 
-\lstinputlisting[firstline=386, lastline=432]{../ProblemaMochilaCpp/ProblemaMochila.cpp}
+\lstinputlisting[firstline=389, lastline=435]{../ProblemaMochilaCpp/ProblemaMochila.cpp}
 
 Como condición de terminación iremos comprobando si se ha mejorado la mejor solución que teníamos hasta el momento o la media de la población en alguna de las últimas generaciones. Si se ha mejorado alguna de ambas se seguirá con la ejecución y sino terminará. Añadiremos también un máximo de generaciones tras las cuales el algoritmo se detendrá aunque no se cumpla la condición anterior. Valoramos también el tomar como condición de terminación que la media de la población esté muy cerca del mejor valor. Sin embargo, tras probar ambas, nos decantamos por la primera ya que de esta segunda forma el algoritmo terminaba demasiado rápido aunque tomásemos diferencias muy pequeñas.
 
-\lstinputlisting[firstline=434, lastline=466]{../ProblemaMochilaCpp/ProblemaMochila.cpp}
+\lstinputlisting[firstline=437, lastline=469]{../ProblemaMochilaCpp/ProblemaMochila.cpp}
 
 Utilizaremos una función auxiliar para actualizar los valores de la mejor solución que tenemos y las medias que usamos en la condición de parada.
 
-\lstinputlisting[firstline=468, lastline=506]{../ProblemaMochilaCpp/ProblemaMochila.cpp}
+\lstinputlisting[firstline=471, lastline=509]{../ProblemaMochilaCpp/ProblemaMochila.cpp}
 
 Finalmente, nuestro programa principal será el encargado de inicializar la población e ir evolucionando las sucesivas generaciones hasta que se cumpla la condición de terminación. Devolverá como parámetro el mejor valor que hayamos encontrado en todas las generaciones y los objetos que componían la mochila para ese valor.
 
 \subsubsection{Código}
 
-\lstinputlisting[firstline=508, lastline=554]{../ProblemaMochilaCpp/ProblemaMochila.cpp}
+\lstinputlisting[firstline=511, lastline=557]{../ProblemaMochilaCpp/ProblemaMochila.cpp}
 
 \subsubsection{Análisis de costes}
 
@@ -321,28 +321,7 @@ Si nos fijamos ahora en los valores que devuelven ambos algoritmos veremos como 
 
 A la hora de comparar los dos algoritmos exponenciales, vemos que el de programación dinámica es sustancialmente más rápido que el de ramificación y poda cuando este último trabaja con números reales. Sin embargo, sorprendentemente, si ejecutamos este último algoritmo con números enteros en lugar de reales, los tiempos bajan drásticamente como podemos ver en la comparación de la tabla \ref{tab:casosRamPodaIYProgDin}. Así, vemos que en este caso ambos algoritmos tienen resultados sin diferencias notables entre uno y otro hasta que llegamos al millón de nodos. Cabe destacar el hecho de que, para $10^5$ y $10^6$ nodos, los nodos explorados coincidan con el numero de objetos, es decir, el algoritmo encuentre la solución en el primer camino que toma. Evidentemente, ambos algoritmos devuelven el mismo valor como resultado.\\
 
-Finalmente nos falta por analizar el comportamiento del algoritmo genético. En la tabla \ref{tab:casosPruebaGen} hemos recogido los tiempos y los valores devueltos en cada ejecución de los distintos casos de prueba de tamaño 1000, así como las medias correspondientes para poder estimar mejor los resultados. Hicimos ejecuciones también con $10^5$ y $10^6$ objetos pero los resultados fueron mucho peor de lo deseable (los valores rondaban el $2-3\%$ del valor óptimo tardando entre uno y dos minutos) así que los hemos omitido. Como se puede ver a simple vista, tanto los tiempos como los valores obtenidos distan mucho de lo que desearíamos. Aunque teóricamente este algoritmo es polinómico, en la práctica hemos comprobado que se comporta bastante peor que los algoritmos exponenciales que hemos estudiado. \\
-
-Variando los parámetros (probabilidades, iteraciones, etc.) asociados al algoritmo genético según se recoge en la tabla \ref{tab:paramGen}, conseguimos distintos tiempos y valores. Los valores iniciales de referencia para el cruce, el elitismo y los diferentes cuartiles los tomamos de \cite{hrist-shre04}. Para obtener valores en torno al 50\% del resultado óptimo, el algoritmo tarda 1,5 segundos aproximadamente. Si ya buscamos una precisión del 75\%, el tiempo se dispara a 4,5 segundos. \\
-
-\begin{table}[h]
-	\centering
-	\begin{tabular}{l|c|c}
-		& \textbf{Parámetros A} & \textbf{Parámetros B} \\ \hline
-		\multicolumn{1}{c|}{\textbf{MAX\_GENERACIONES}} & 1000 & 2000 \\
-		\textbf{TAM\_POBL} & 100 & 100 \\
-		\textbf{TAM\_ULT} & 10 & 30 \\ \hline
-		\textbf{PROB\_MUTACION} & 0,05 & 0,05 \\
-		\textbf{PORC\_MUTACION} & 0,01 & 0,01 \\ \hline
-		\textbf{PROB\_CRUCE} & 0,85 & 0,95 \\
-		\textbf{PROB\_ELITISMO} & 0,1 & 0,05 \\ \hline
-		\textbf{PROB\_1CUARTIL} & 0,5 & 0,5 \\
-		\textbf{PROB\_2CUARTIL} & 0,8 & 0,8 \\
-		\textbf{PROB\_3CUARTIL} & 0,95 & 0,95
-	\end{tabular}
-	\caption{Parámetros para las dos ejecuciones del algoritmo genético. Los nombres se corresponden con los del código descrito en la sección \ref{sec:algGen}.}
-	\label{tab:paramGen}
-\end{table}
+Finalmente nos falta por analizar el comportamiento del algoritmo genético. En la tabla \ref{tab:casosPruebaGen} hemos recogido los tiempos y los valores devueltos en cada ejecución de los distintos casos de prueba de tamaño 1000, así como las medias correspondientes para poder estimar mejor los resultados. Hicimos ejecuciones también con $10^5$ y $10^6$ objetos pero los resultados fueron mucho peor de lo deseable (los valores rondaban el $2-3\%$ del valor óptimo tardando entre uno y dos minutos) así que los hemos omitido. Como se puede ver a simple vista, tanto los tiempos como los valores obtenidos distan mucho de lo que desearíamos. Aunque teóricamente este algoritmo es polinómico, en la práctica hemos comprobado que se comporta bastante peor que los algoritmos exponenciales que hemos estudiado.
 
 \begin{table}[H]
 	\centering
@@ -388,6 +367,27 @@ Variando los parámetros (probabilidades, iteraciones, etc.) asociados al algorit
 	\end{tabular}
 	\caption{Tiempos (en segundos) y valores de las distintas ejecuciones de cada caso de prueba sobre el algoritmo genético en sus versiones con parámetros A y B.}
 	\label{tab:casosPruebaGen}
+\end{table}
+
+Variando los parámetros (probabilidades, iteraciones, etc.) asociados al algoritmo genético según se recoge en la tabla \ref{tab:paramGen}, conseguimos distintos tiempos y valores. Los valores iniciales de referencia para el cruce, el elitismo y los diferentes cuartiles los tomamos de \cite{hrist-shre04}. Para obtener valores en torno al 50\% del resultado óptimo, el algoritmo tarda 1,5 segundos aproximadamente. Si ya buscamos una precisión del 75\%, el tiempo se dispara a 4,5 segundos. \\
+
+\begin{table}[h]
+	\centering
+	\begin{tabular}{l|c|c}
+		& \textbf{Parámetros A} & \textbf{Parámetros B} \\ \hline
+		\multicolumn{1}{c|}{\textbf{MAX\_GENERACIONES}} & 1000 & 2000 \\
+		\textbf{TAM\_POBL} & 100 & 100 \\
+		\textbf{TAM\_ULT} & 10 & 30 \\ \hline
+		\textbf{PROB\_MUTACION} & 0,05 & 0,05 \\
+		\textbf{PORC\_MUTACION} & 0,01 & 0,01 \\ \hline
+		\textbf{PROB\_CRUCE} & 0,85 & 0,95 \\
+		\textbf{PROB\_ELITISMO} & 0,1 & 0,05 \\ \hline
+		\textbf{PROB\_1CUARTIL} & 0,5 & 0,5 \\
+		\textbf{PROB\_2CUARTIL} & 0,8 & 0,8 \\
+		\textbf{PROB\_3CUARTIL} & 0,95 & 0,95
+	\end{tabular}
+	\caption{Parámetros para las dos ejecuciones del algoritmo genético. Los nombres se corresponden con los del código descrito en la sección \ref{sec:algGen}.}
+	\label{tab:paramGen}
 \end{table}
 
 Concluimos que, al contrario de lo que podría parecer en un principio, este algoritmo genético en particular no nos es útil para resolver el problema. Sin embargo, obtenemos tiempos muy razonables para cantidades grandes de objetos con los algoritmos exponenciales, además de hallar la solución óptima. Por lo tanto vemos que, entre los algoritmos que hemos estudiado, los más adecuados al problema de la mochila son estos últimos. Sin diferenciar entre programación dinámica y ramificación y poda salvo en el caso de escoger parámetros enteros o reales.
